--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,7 +3,7 @@
 
 .title-bar {
   background-color: #f0f2f5;
-  color: #98FB98;
+  color: #50C878;
   font-family: 'Roboto', sans-serif; /* Change font to Roboto */
   font-size: 5.5rem; /* Adjust font size if necessary */
   text-align: center;
@@ -36,12 +36,12 @@
   font-family: 'Poppins', sans-serif; /* Set the font for the title text */
   font-size: 2.25rem; /* Adjust font size if necessary */
   font-weight: 800;
-  color: #98FB98; 
+  color: #50C878; 
   margin-left: 10px; /* Add some space between the logo and the text */
 }
 
 .navbar-custom {
-  background-color: #98FB98;
+  background-color: #50C878;
   transition: top 0.3s;
 }
 
