--- a/src/components/From.css
+++ b/src/components/From.css
@@ -18,8 +18,8 @@
   .header {
     position: relative;
     background-clip: border-box;
-    background-color: #1e88e5;
-    background-image: linear-gradient(to top right, #1e88e5, #42a5f5);
+    background-color: #22cd9d;
+    background-image: linear-gradient(to top right,#22cd9d, #6bf1cb);
     margin: 10px;
     border-radius: 0.75rem;
     overflow: hidden;
@@ -68,7 +68,7 @@
   }
   
   .input:focus {
-    border: 1px solid #1e88e5;
+    border: 1px solid #22cd9d;
   }
   
   .checkbox-container {
@@ -109,8 +109,8 @@
     line-height: 1rem;
     text-align: center;
     padding: 0.75rem 1.5rem;
-    background-color: #1e88e5;
-    background-image: linear-gradient(to top right, #1e88e5, #42a5f5);
+    background-color: #22cd9d;
+    background-image: linear-gradient(to top right, #22cd9d,#86ffdd);
     border-radius: 0.5rem;
     width: 100%;
     outline: 0;
@@ -133,7 +133,7 @@
     font-weight: 700;
     font-size: 0.875rem;
     margin-left: 0.25rem;
-    color: #1e88e5;
+    color:#22cd9d;
   }
   
   .forget {
